--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Kanchan2000</title>
+    <title>C.kanchan</title>
     <meta name="description" content="Home of projects.">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js">
+    </script>
 </head>
 
 <body>
@@ -74,7 +74,8 @@
                                             </path>
                                         </svg></a> </li>
                                 <li class="github"> <a aria-label="github" data-inlinesvg=".inlineSvgFile-7"
-                                        href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120.78 117.79">
+                                        href="https://github.com/kanchan6927"><svg xmlns="http://www.w3.org/2000/svg"
+                                            viewBox="0 0 120.78 117.79">
                                             <g id="Layer_2" data-name="Layer 2">
                                                 <g id="Layer_1-2" data-name="Layer 1">
                                                     <path class="cls-1"
@@ -132,8 +133,9 @@
 
 
                                 </div> <span>
-                                    <p>My name is Kanchan Chavan, I'm a fresher front-end developer based in Pune,
-                                        India.
+                                    <p>My name is Kanchan Chavan, I'm a fresher Web developer based in Pune,
+                                        India,with the 10 months of experience.
+
                                         I have worked on many types of front-ends.</p>
 
                                     <p> with a passion for creating immersive user experiences.
@@ -149,21 +151,18 @@
                             <div class="individual-project myprojects" id="individual-project">
                                 <h2>MyBlogs</h2> <span>
                                     <p>' MyBlogs' is a web application which has a UI that allows you to register and
-                                        login to your account where u can post your Blogs accoding to given catogories
+                                        login to your account where you can post your Blogs accoding to given catogories
                                         and other people can see the blogs and will be able to like the blogs. The git
                                         repository link is provided below.</p>
 
-                                    <a href="#" class="projct-link-btn" >View site</a>
+                                    <a href="#" class="projct-link-btn">View site</a>
 
                                 </span>
                             </div>
                             <div class="individual-project" id="individual-project2">
                                 <h2>Let's Make Something Fresh!</h2> <span>
 
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus excepturi expedita
-                                        laudantium impedit ad quaerat, deserunt sint aliquam facere in eos est nulla
-                                        veritatis quis molestiae atque quod repellat debitis aperiam veniam. Inventore
-                                        ullam tempore omnis qui sit earum facere. Sit ea voluptates qui itaque.</p>
+                                    <p></p>
 
                                     <p>Reach me from here :</p>
 
@@ -171,7 +170,7 @@
 
                                 </span>
                             </div>
-                            <div class="individual-project" id="individual-project3">
+                            <!-- <div class="individual-project" id="individual-project3">
                                 <h2>Not updated...</h2> <span>
                                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur est autem
                                         facere fuga et molestias velit, hic ducimus blanditiis, labore eius. Voluptatem
@@ -181,7 +180,7 @@
 
 
                                 </span>
-                            </div>
+                            </div> -->
                             <div class="individual-project" id="individual-project4">
                                 <h2>Lorem ipsum dolor sit amet.</h2> <span>
                                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum consectetur
@@ -201,8 +200,10 @@
                                         <span>Projects</span> </a>
                                     <a class="tablinks" id="contact">
                                         <span>Contact</span> </a>
-                                    <a class="tablinks" id="cv">
-                                        <span>CV</span> </a>
+                                    <!-- <a class="tablinks" id="cv">
+                                        <span>CV</span> </a> -->
+                                    <a class="" id="" href="/Ckanchan-resume.pdf" download>
+                                        <span>Download CV</span> </a>
                                     <a class="backhome">
                                         <span>Back to Home</span> </a>
 
@@ -210,7 +211,7 @@
                             </div>
                         </div>
                     </main>
-                    <footer>©2022 kanchan2000.com</footer>
+                    <footer>©2023 C.kanchan.com</footer>
                     <div>
                         <svg class="cornersvg" width="300" height="300" data-name="corner-bottom-right"
                             xmlns="http://www.w3.org/2000/svg" style="pointer-events:none"
