--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
                                         and other people can see the blogs and will be able to like the blogs. The git
                                         repository link is provided below.</p>
 
-                                    <a href="#" class="projct-link-btn">View site</a>
+                                    <a href="https://github.com/kanchan6927/new-project.git"
+                                        class="projct-link-btn">View site</a>
 
                                 </span>
                             </div>
