--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                         <span>Contact</span> </a>
                                     <!-- <a class="tablinks" id="cv">
                                         <span>CV</span> </a> -->
-                                    <a class="" id="" href="/Ckanchan-resume.pdf" download>
+                                    <a class="" id="" href="Ckanchan-resume.pdf" download>
                                         <span>Download CV</span> </a>
                                     <a class="backhome">
                                         <span>Back to Home</span> </a>
