--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <body>
 
+
+
     <div class="frontPage">
         <div class="photo">
             <div class="switch">
@@ -133,19 +135,7 @@
 
 
                                 </div> <span>
-                                    <p>My name is Kanchan Chavan, I'm a fresher Web developer based in Pune,
-                                        India,with the 10 months of experience.
-
-                                        I have worked on many types of front-ends.</p>
-
-                                    <p> with a passion for creating immersive user experiences.
-                                        seeking to further improve java skills as the future java full stack developer
-                                        at
-                                        atmospheric Solutions.
-                                        Looking forward to work as a java full stack developer.
-                                    </p>
-
-
+                                    <p>My name is Kanchan Chavan, and I am a web developer based in Pune, India. While I am a fresher in the industry, I have gained valuable experience over the past 10 months. During this time, I have worked on various front-end projects, focusing on creating immersive user experiences. I am passionate about Java development and aspire to become a proficient Java Full Stack Developer. I am excited about the opportunity to contribute my skills and grow as a professional at Atmospheric Solutions. I am actively seeking a position as a Java Full Stack Developer and look forward to leveraging my abilities in a challenging work environment.</p>
                                 </span>
                             </div>
                             <div class="individual-project myprojects" id="individual-project">
