--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
 
 
                                 </div> <span>
-                                    <p>My name is Kanchan Chavan, and I am a web developer based in Pune, India. While I am a fresher in the industry, I have gained valuable experience over the past 10 months. During this time, I have worked on various front-end projects, focusing on creating immersive user experiences. I am passionate about Java development and aspire to become a proficient Java Full Stack Developer. I am excited about the opportunity to contribute my skills and grow as a professional at Atmospheric Solutions. I am actively seeking a position as a Java Full Stack Developer and look forward to leveraging my abilities in a challenging work environment.</p>
+                                    <p>My name is Kanchan Chavan, and I am a web developer based in Pune, India. While I am a fresher in the industry, I have gained valuable experience over the past 10 months. During this time, I have worked on various front-end projects, focusing on creating immersive user experiences.</p>
+                                    <p> I am passionate about Java development and aspire to become a proficient Java Full Stack Developer. I am excited about the opportunity to contribute my skills and grow as a professional at Atmospheric Solutions. I am actively seeking a position as a Java Full Stack Developer and look forward to leveraging my abilities in a challenging work environment.</p>
                                 </span>
                             </div>
                             <div class="individual-project myprojects" id="individual-project">
