--- a/index.html
+++ b/index.html
@@ -135,16 +135,27 @@
 
 
                                 </div> <span>
-                                    <p>My name is Kanchan Chavan, and I am a web developer based in Pune, India. While I am a fresher in the industry, I have gained valuable experience over the past 10 months. During this time, I have worked on various front-end projects, focusing on creating immersive user experiences.</p>
-                                    <p> I am passionate about Java development and aspire to become a proficient Java Full Stack Developer. I am excited about the opportunity to contribute my skills and grow as a professional at Atmospheric Solutions. I am actively seeking a position as a Java Full Stack Developer and look forward to leveraging my abilities in a challenging work environment.</p>
+                                    <p>My name is Kanchan Chavan, and I am a web developer based in Pune, India. While I
+                                        am a fresher in the industry, I have gained valuable experience over the past 10
+                                        months. During this time, I have worked on various front-end projects, focusing
+                                        on creating immersive user experiences.</p>
+                                    <p> I am passionate about Java development and aspire to become a proficient Java
+                                        Full Stack Developer. I am excited about the opportunity to contribute my skills
+                                        and grow as a professional at Atmospheric Solutions. I am actively seeking a
+                                        position as a Java Full Stack Developer and look forward to leveraging my
+                                        abilities in a challenging work environment.</p>
                                 </span>
                             </div>
                             <div class="individual-project myprojects" id="individual-project">
                                 <h2>MyBlogs</h2> <span>
-                                    <p>' MyBlogs' is a web application which has a UI that allows you to register and
-                                        login to your account where you can post your Blogs accoding to given catogories
-                                        and other people can see the blogs and will be able to like the blogs. The git
-                                        repository link is provided below.</p>
+                                    <p>
+                                        MyBlogs' is an interactive web application that enables users to create an
+                                        account, login, and share their blogs based on predefined categories. Users can
+                                        explore the platform, read blogs from various contributors, and engage with the
+                                        content by liking the blogs they find interesting. The project focuses on
+                                        creating a user-friendly UI to enhance the blogging experience. For more details
+                                        and to view the source code, please visit the provided GitHub repository link.
+                                    </p>
 
                                     <a href="https://github.com/kanchan6927/new-project.git"
                                         class="projct-link-btn">View site</a>
@@ -152,14 +163,10 @@
                                 </span>
                             </div>
                             <div class="individual-project" id="individual-project2">
-                                <h2>Let's Make Something Fresh!</h2> <span>
-
+                                <h2>"Let's Make Something Fresh! Feel free to reach out to me using the following
+                                    contact details:</h2> <span>
                                     <p></p>
-
-                                    <p>Reach me from here :</p>
-
-                                    <h3>Kanchanchavan2511@gmail.com</h3>
-
+                                    <span>Email: <h3>Kanchanchavan2511@gmail.com</h3></span>
                                 </span>
                             </div>
                             <!-- <div class="individual-project" id="individual-project3">
