--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
                             </div>
                             <div class="individual-project" id="individual-project2">
                                 <h2>"Let's Make Something Fresh! Feel free to reach out to me using the following
-                                    contact details:</h2> <span>
+                                    contact details:</h2> <>
                                     <p></p>
-                                    <span>Email: <h3>Kanchanchavan2511@gmail.com</h3></span>
+                                    Email: <h3>Kanchanchavan2511@gmail.com</h3>
                                 </span>
                             </div>
                             <!-- <div class="individual-project" id="individual-project3">
