--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
                                 </span>
                             </div>
                             <div class="individual-project" id="individual-project2">
-                                <h2>"Let's Make Something Fresh! Feel free to reach out to me using the following
-                                    contact details:</h2> <>
+                                <h2>"Let's Make Something Fresh! 
+                                    <br>Feel free to reach out to me using the following
+                                    contact details:</h2> 
                                     <p></p>
                                     Email: <h3>Kanchanchavan2511@gmail.com</h3>
                                 </span>
