--- a/index.html
+++ b/index.html
@@ -165,9 +165,10 @@
                             <div class="individual-project" id="individual-project2">
                                 <h2>"Let's Make Something Fresh! 
                                     <br>Feel free to reach out to me using the following
-                                    contact details:</h2> 
+                                    contact details:</h2> <span>
                                     <p></p>
-                                    Email: <h3>Kanchanchavan2511@gmail.com</h3>
+                                   Email: <h3>Kanchanchavan2511@gmail.com</h3>
+                               
                                 </span>
                             </div>
                             <!-- <div class="individual-project" id="individual-project3">
