--- a/index.html
+++ b/index.html
@@ -163,12 +163,14 @@
                                 </span>
                             </div>
                             <div class="individual-project" id="individual-project2">
-                                <h2>"Let's Make Something Fresh! 
-                                    <br>Feel free to reach out to me using the following
-                                    contact details:</h2> <span>
+                                <h2>Let's Make Something Fresh!
+                                </h2>
+                                <p> Feel free to reach out to me using the following
+                                    contact details:</p>
+                                <span>
                                     <p></p>
-                                   Email: <h3>Kanchanchavan2511@gmail.com</h3>
-                               
+                                    Email: <h3>Kanchanchavan2511@gmail.com</h3>
+
                                 </span>
                             </div>
                             <!-- <div class="individual-project" id="individual-project3">
