--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                     </p>
 
                                     <a href="https://github.com/kanchan6927/new-project.git"
-                                        class="projct-link-btn">View site</a>
+                                        class="projct-link-btn">GitHub</a>
 
                                 </span>
                             </div>
