--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                         <span>Contact</span> </a>
                                     <!-- <a class="tablinks" id="cv">
                                         <span>CV</span> </a> -->
-                                    <a class="" id="" href="Ckanchan-resume.pdf" download>
+                                    <a class="" id="" href="ChavanKanchan_Resume.pdf" download>
                                         <span>Download CV</span> </a>
                                     <a class="backhome">
                                         <span>Back to Home</span> </a>
