--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
                         </div>
                         <div class="spacer"></div>
                         <div class="main-projects">
-                            <h2>About</h2>
+                            <h2>Projects</h2>
                             <div class="project-wrapper" id="pw">
                                 <div> <a class="tablinks" id="projects">
-                                        <span>Projects</span> </a>
+                                        <span>MyBlogs</span> </a>
                                     <a class="tablinks" id="contact">
-                                        <span>Contact</span> </a>
+                                        <span>Flipkart clone</span> </a>
                                     <!-- <a class="tablinks" id="cv">
                                         <span>CV</span> </a> -->
                                     <a class="" id="" href="ChavanKanchan_Resume.pdf" download>
