--- a/index.html
+++ b/index.html
@@ -163,15 +163,19 @@
                                 </span>
                             </div>
                             <div class="individual-project" id="individual-project2">
-                                <h2>Let's Make Something Fresh!
+                                <h2>Flipkart Clone (Home page)
                                 </h2>
-                                <p> Feel free to reach out to me using the following
-                                    contact details:</p>
-                                <span>
-                                    <p></p>
-                                    Email: <h3>Kanchanchavan2511@gmail.com</h3>
+                                <p>The Flipkart Clone is a website created using Html, Css, and
+                                    JavaScript.
+                                <p></p>
+                                It replicates the home page of the popular e-commerce platform
+                                Flipkart. The clone features a user-friendly interface, a product catalog with
+                                detailed descriptions and images, and a responsive design across different devices
+                                and scree</p>
 
-                                </span>
+                                <a href="https://kanchan6927.github.io/flipkart-clone/"
+                                    class="projct-link-btn">GitHub</a>
+
                             </div>
                             <!-- <div class="individual-project" id="individual-project3">
                                 <h2>Not updated...</h2> <span>
