--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@
                             </div>
                             <div class="individual-project" id="individual-project2">
                                 <h2>Flipkart Clone (Home page)
-                                </h2>
+                                </h2> <span>
                                 <p>The Flipkart Clone is a website created using Html, Css, and
                                     JavaScript.
                                 <p></p>
                                 It replicates the home page of the popular e-commerce platform
                                 Flipkart. The clone features a user-friendly interface, a product catalog with
                                 detailed descriptions and images, and a responsive design across different devices
-                                and scree</p>
+                                and scree</p> </span>
 
                                 <a href="https://kanchan6927.github.io/flipkart-clone/"
                                     class="projct-link-btn">GitHub</a>
