--- a/index.html
+++ b/index.html
@@ -171,10 +171,11 @@
                                 It replicates the home page of the popular e-commerce platform
                                 Flipkart. The clone features a user-friendly interface, a product catalog with
                                 detailed descriptions and images, and a responsive design across different devices
-                                and scree</p> </span>
+                                and scree</p> 
 
                                 <a href="https://kanchan6927.github.io/flipkart-clone/"
                                     class="projct-link-btn">GitHub</a>
+                                </span>
 
                             </div>
                             <!-- <div class="individual-project" id="individual-project3">
