--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                 It replicates the home page of the popular e-commerce platform
                                 Flipkart. The clone features a user-friendly interface, a product catalog with
                                 detailed descriptions and images, and a responsive design across different devices
-                                and scree</p> 
+                                and screen</p> 
 
                                 <a href="https://kanchan6927.github.io/flipkart-clone/"
                                     class="projct-link-btn">GitHub</a>
