--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                 and screen</p> 
 
                                 <a href="https://kanchan6927.github.io/flipkart-clone/"
-                                    class="projct-link-btn">GitHub</a>
+                                    class="projct-link-btn">Link</a>
                                 </span>
 
                             </div>
