--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                 </span>
 
                             </div>
-                            <!-- <div class="individual-project" id="individual-project3">
+                            <div class="individual-project" id="individual-project3">
                                 <h2>Not updated...</h2> <span>
                                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur est autem
                                         facere fuga et molestias velit, hic ducimus blanditiis, labore eius. Voluptatem
@@ -188,7 +188,7 @@
 
 
                                 </span>
-                            </div> -->
+                            </div>
                             <div class="individual-project" id="individual-project4">
                                 <h2>Lorem ipsum dolor sit amet.</h2> <span>
                                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum consectetur
