--- a/index.html
+++ b/index.html
@@ -135,10 +135,19 @@
 
 
                                 </div> <span>
-                                    <p>My name is Kanchan Chavan, and I am a web developer based in Pune, India. While I
-                                        am a fresher in the industry, I have gained valuable experience over the past 10
-                                        months. During this time, I have worked on various front-end projects, focusing
-                                        on creating immersive user experiences.</p>
+                                    <p>As a versatile freelancer with a robust skill set spanning frontend development,
+                                        backend expertise,SEO mastery and digital marketing finesse, I bring a dynamic
+                                        blend of technical proficiency & strategic insight to every project I undertake.
+                                        With a keen eye for design & a knack for crafting seamless user experiences, I
+                                        excel in bringing ideas to life through intuitive interface & efficient code .
+                                        My proficiency in backend technologies ensures robust functionality &
+                                        scalability, While my expertise in SEO and digital marketing empowers businesses
+                                        to achieve maximum visibility and engagement in the ever-evolving digital
+                                        landscape. With a passion for innovation and a commitment to delivering results
+                                        driven solutions, I am poised to elevate your project to new heights of success.
+                                    </p>
+
+
                                     <p> I am passionate about Java development and aspire to become a proficient Java
                                         Full Stack Developer. I am excited about the opportunity to contribute my skills
                                         and grow as a professional at Atmospheric Solutions. I am actively seeking a
@@ -165,16 +174,16 @@
                             <div class="individual-project" id="individual-project2">
                                 <h2>Flipkart Clone (Home page)
                                 </h2> <span>
-                                <p>The Flipkart Clone is a website created using Html, Css, and
-                                    JavaScript.
-                                <p></p>
-                                It replicates the home page of the popular e-commerce platform
-                                Flipkart. The clone features a user-friendly interface, a product catalog with
-                                detailed descriptions and images, and a responsive design across different devices
-                                and screen</p> 
+                                    <p>The Flipkart Clone is a website created using Html, Css, and
+                                        JavaScript.
+                                    <p></p>
+                                    It replicates the home page of the popular e-commerce platform
+                                    Flipkart. The clone features a user-friendly interface, a product catalog with
+                                    detailed descriptions and images, and a responsive design across different devices
+                                    and screen</p>
 
-                                <a href="https://kanchan6927.github.io/flipkart-clone/"
-                                    class="projct-link-btn">Link</a>
+                                    <a href="https://kanchan6927.github.io/flipkart-clone/"
+                                        class="projct-link-btn">Link</a>
                                 </span>
 
                             </div>
