--- a/index.html
+++ b/index.html
@@ -138,8 +138,12 @@
                                     <p>As a versatile freelancer with a robust skill set spanning frontend development,
                                         backend expertise,SEO mastery and digital marketing finesse, I bring a dynamic
                                         blend of technical proficiency & strategic insight to every project I undertake.
-                                        With a keen eye for design & a knack for crafting seamless user experiences, I
-                                        excel in bringing ideas to life through intuitive interface & efficient code .
+                                        With a keen eye for design & a knack for crafting seamless user experiences, 
+                                        
+                                        I
+                                        excel in bringing ideas to life through intuitive interface & efficient code .</p>
+
+                                        <p>
                                         My proficiency in backend technologies ensures robust functionality &
                                         scalability, While my expertise in SEO and digital marketing empowers businesses
                                         to achieve maximum visibility and engagement in the ever-evolving digital
@@ -148,11 +152,7 @@
                                     </p>
 
 
-                                    <p> I am passionate about Java development and aspire to become a proficient Java
-                                        Full Stack Developer. I am excited about the opportunity to contribute my skills
-                                        and grow as a professional at Atmospheric Solutions. I am actively seeking a
-                                        position as a Java Full Stack Developer and look forward to leveraging my
-                                        abilities in a challenging work environment.</p>
+                                   
                                 </span>
                             </div>
                             <div class="individual-project myprojects" id="individual-project">
@@ -228,7 +228,7 @@
                             </div>
                         </div>
                     </main>
-                    <footer>©2023 C.kanchan.com</footer>
+                    <footer>©2024 C.kanchan.com</footer>
                     <div>
                         <svg class="cornersvg" width="300" height="300" data-name="corner-bottom-right"
                             xmlns="http://www.w3.org/2000/svg" style="pointer-events:none"
