--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
                             </div>
                             <div class="individual-project" id="individual-project3">
-                                <h2>Not updated...</h2> <span>
+                                <h2>Indira National School , Pune</h2> <span>
                                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur est autem
                                         facere fuga et molestias velit, hic ducimus blanditiis, labore eius. Voluptatem
                                         voluptas sapiente laudantium veritatis tempore facilis unde vel repellat et
@@ -217,6 +217,8 @@
                                         <span>MyBlogs</span> </a>
                                     <a class="tablinks" id="contact">
                                         <span>Flipkart clone</span> </a>
+                                    <a class="tablinks" id="contact">
+                                        <span>Indira National School</span> </a>
                                     <!-- <a class="tablinks" id="cv">
                                         <span>CV</span> </a> -->
                                     <a class="" id="" href="ChavanKanchan_Resume.pdf" download>
