--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                         <span>MyBlogs</span> </a>
                                     <a class="tablinks" id="contact">
                                         <span>Flipkart clone</span> </a>
-                                    <a class="tablinks" id="contact">
+                                    <a class="tablinks" id="indira">
                                         <span>Indira National School</span> </a>
                                     <!-- <a class="tablinks" id="cv">
                                         <span>CV</span> </a> -->
