--- a/index.html
+++ b/index.html
@@ -138,12 +138,13 @@
                                     <p>As a versatile freelancer with a robust skill set spanning frontend development,
                                         backend expertise,SEO mastery and digital marketing finesse, I bring a dynamic
                                         blend of technical proficiency & strategic insight to every project I undertake.
-                                        With a keen eye for design & a knack for crafting seamless user experiences, 
-                                        
-                                        I
-                                        excel in bringing ideas to life through intuitive interface & efficient code .</p>
+                                        With a keen eye for design & a knack for crafting seamless user experiences,
 
-                                        <p>
+                                        I
+                                        excel in bringing ideas to life through intuitive interface & efficient code .
+                                    </p>
+
+                                    <p>
                                         My proficiency in backend technologies ensures robust functionality &
                                         scalability, While my expertise in SEO and digital marketing empowers businesses
                                         to achieve maximum visibility and engagement in the ever-evolving digital
@@ -152,7 +153,7 @@
                                     </p>
 
 
-                                   
+
                                 </span>
                             </div>
                             <div class="individual-project myprojects" id="individual-project">
@@ -198,7 +199,7 @@
 
                                 </span>
                             </div>
-                            <div class="individual-project" id="individual-project4">
+                            <!-- <div class="individual-project" id="individual-project4">
                                 <h2>Lorem ipsum dolor sit amet.</h2> <span>
                                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum consectetur
                                         quaerat, corporis sunt, nisi adipisci corrupti eos dicta fuga iure voluptate
@@ -206,7 +207,7 @@
                                         pariatur, deleniti perferendis. Unde modi quod neque tenetur illo, itaque totam.
                                     </p>
                                 </span>
-                            </div>
+                            </div> -->
 
                         </div>
                         <div class="spacer"></div>
