--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
                         <div class="main-projects">
                             <h2>Projects</h2>
                             <div class="project-wrapper" id="pw">
-                                <div> <a class="tablinks" id="projects">
+                                <div> 
+                                    <a class="tablinks" id="projects">
                                         <span>MyBlogs</span> </a>
                                     <a class="tablinks" id="contact">
                                         <span>Flipkart clone</span> </a>
