--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                 </span>
 
                             </div>
-                            <div class="individual-project" id="individual-project3">
+                            <!-- <div class="individual-project" id="individual-project3">
                                 <h2>Indira National School , Pune</h2> <span>
                                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur est autem
                                         facere fuga et molestias velit, hic ducimus blanditiis, labore eius. Voluptatem
@@ -198,7 +198,7 @@
 
 
                                 </span>
-                            </div>
+                            </div> -->
                             <!-- <div class="individual-project" id="individual-project4">
                                 <h2>Lorem ipsum dolor sit amet.</h2> <span>
                                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum consectetur
@@ -219,8 +219,8 @@
                                         <span>MyBlogs</span> </a>
                                     <a class="tablinks" id="contact">
                                         <span>Flipkart clone</span> </a>
-                                    <a class="tablinks" id="indira">
-                                        <span>Indira National School</span> </a>
+                                    <!-- <a class="tablinks" id="indira">
+                                        <span>Indira National School</span> </a> -->
                                     <!-- <a class="tablinks" id="cv">
                                         <span>CV</span> </a> -->
                                     <a class="" id="" href="ChavanKanchan_Resume.pdf" download>
