--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>C.kanchan</title>
     <meta name="description" content="Home of projects.">
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js">
     </script>
 </head>
 
@@ -199,7 +199,7 @@
 
                                 </span>
                             </div> -->
-                            <!-- <div class="individual-project" id="individual-project4">
+                            <div class="individual-project" id="individual-project4">
                                 <h2>Lorem ipsum dolor sit amet.</h2> <span>
                                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum consectetur
                                         quaerat, corporis sunt, nisi adipisci corrupti eos dicta fuga iure voluptate
@@ -207,7 +207,7 @@
                                         pariatur, deleniti perferendis. Unde modi quod neque tenetur illo, itaque totam.
                                     </p>
                                 </span>
-                            </div> -->
+                            </div>
 
                         </div>
                         <div class="spacer"></div>
