--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
                                         <span>MyBlogs</span> </a>
                                     <a class="tablinks" id="contact">
                                         <span>Flipkart clone</span> </a>
-                                    <!-- <a class="tablinks" id="indira">
-                                        <span>Indira National School</span> </a> -->
+                                    <a class="tablinks" id="indira">
+                                        <span>Indira National School</span> </a>
                                     <!-- <a class="tablinks" id="cv">
                                         <span>CV</span> </a> -->
                                     <a class="" id="" href="ChavanKanchan_Resume.pdf" download>
