--- a/index.html
+++ b/index.html
@@ -190,13 +190,9 @@
                             </div>
                             <div class="individual-project" id="individual-project3">
                                 <h2>Indira National School , Pune</h2> <span>
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur est autem
-                                        facere fuga et molestias velit, hic ducimus blanditiis, labore eius. Voluptatem
-                                        voluptas sapiente laudantium veritatis tempore facilis unde vel repellat et
-                                        fugiat. Recusandae veniam exercitationem corrupti asperiores nihil nobis
-                                        obcaecati non officiis autem ipsum? </p>
+                                    <p>Indira National school is based in pune,india</p>
 
-
+                                    <a href="https://indiranationalschool.ac.in/" class="projct-link-btn">Link</a>
                                 </span>
                             </div>
                             <div class="individual-project" id="individual-project4">
@@ -214,7 +210,7 @@
                         <div class="main-projects">
                             <h2>Projects</h2>
                             <div class="project-wrapper" id="pw">
-                                <div> 
+                                <div>
                                     <a class="tablinks" id="projects">
                                         <span>MyBlogs</span> </a>
                                     <a class="tablinks" id="contact">
