--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                             <div class="individual-project" id="individual-project3">
                                 <h2>Indira National School , Pune</h2> <span>
                                     <p>Indira National school is based in pune,india</p>
+                                    <p>Go through the below Link : </p>
 
                                     <a href="https://indiranationalschool.ac.in/" class="projct-link-btn">Link</a>
                                 </span>
