--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                         <span>Indira National School</span> </a>
                                     <!-- <a class="tablinks" id="cv">
                                         <span>CV</span> </a> -->
-                                    <a class="" id="" href="cv.pdf" download>
+                                    <a class="" id="" href="kanchan_chavan.pdf" download>
                                         <span>Download CV</span> </a>
                                     <a class="backhome">
                                         <span>Back to Home</span> </a>
