--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
 
                             </div>
                             <div class="individual-project" id="individual-project3">
-                                <h2>Indira National School , Pune</h2> <span>
-                                    <p>Indira National school is based in pune,india</p>
+                                <h2>Indira Group of Institutes , Pune</h2> <span>
+                                    <p>Indira National Group is based in pune,india</p>
                                     <p>Go through the below Link : </p>
 
-                                    <a href="https://indiranationalschool.ac.in/" class="projct-link-btn">Link</a>
+                                    <a href="https://indiraicem.ac.in/" target="_blank" class="projct-link-btn">Link</a>
                                 </span>
                             </div>
                             <div class="individual-project" id="individual-project4">
@@ -220,7 +220,7 @@
                                         <span>Indira National School</span> </a>
                                     <!-- <a class="tablinks" id="cv">
                                         <span>CV</span> </a> -->
-                                    <a class="" id="" href="kanchan_chavan.pdf" download>
+                                    <a class="" id="" href="kanchan.Chavan.pdf" download>
                                         <span>Download CV</span> </a>
                                     <a class="backhome">
                                         <span>Back to Home</span> </a>
